--- a/static/aboutus.html
+++ b/static/aboutus.html
@@ -1,37 +1,74 @@
 <html>
-    <head></head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Template</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">       
+        <style>
+            .nav-item{
+                font-size: 1.5rem;
+            }
+        </style>
+    </head>
     <body>
-        <!-- navbar here -->
-        <div class="container">
-            <div class="hero py-5">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="box" style="border: 2px solid black; border-radius: 10px;"></div>
-                            <h2>Title 1</h2>
-                            <ul>
-                                <li>Bullet point 1</li>
-                                <li>Bullet point 2</li>
-                                <li>Bullet point 3</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="box" style="border: 2px solid black; border-radius: 10px;"></div>
-                            <h2>Question</h2>
-                            <form>
-                                <label for="answer">Select the correct answer:</label>
-                                <select name="answer" id="answer">
-                                    <option value="option1">Option 1</option>
-                                    <option value="option2">Option 2</option>
-                                    <option value="option3">Option 3</option>
-                                </select><br>
-                                <input type="submit" value="Submit">
-                            </form>
-                        </div>
-                        </div>
-                    </div>
-                </div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+            <div class="row">
+                <div class="col-md-12"></div>
             </div>
+            <div class="collapse navbar-collapse justify-content-center text-center" id="navbarNav">
+                <ul class="navbar-nav mx-auto">
+                <li class="nav-item px-3">
+                    <a class="nav-link" href="#">Our Solution</a>
+                </li>
+                <li class="nav-item px-3">
+                    <a class="nav-link" href="#">FAQ</a>
+                </li>
+                <li class="nav-item px-3">
+                    <a class="nav-link" href="#">About Us</a>
+                </li>
+                <li class="nav-item dropdown px-3">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Pillars
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">Land</a></li>
+                    <li><a class="dropdown-item" href="#">Ocean</a></li>
+                    <li><a class="dropdown-item" href="#">Construction</a></li>
+                    <li><a class="dropdown-item" href="#">Rock</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item px-3">
+                    <a class="nav-link" href="#">Entrepreneurs</a>
+                </li>
+                </ul>
+            </div>
+            </div>
+        </nav>
+        <!-- Body content here -->
+        <div class="container">
+            <footer class="py-3 my-4">
+              <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="#" class="nav-link px-3 text-muted"></a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-3 text-muted">Our Solution</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-3 text-muted">FAQ</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-3 text-muted">About Us</a></li>
+                <li class="nav-item dropdown text-muted">
+                    <a class="nav-link px-3 dropdown-toggle text-muted" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Pillars
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="#">Land</a></li>
+                    <li><a class="dropdown-item" href="#">Ocean</a></li>
+                    <li><a class="dropdown-item" href="#">Construction</a></li>
+                    <li><a class="dropdown-item" href="#">Rock</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a href="#" class="nav-link px-3 text-muted">Entrepreneurs</a></li>
+              </ul>
+              <p class="text-center text-muted">© 2024 CompSocSci</p>
+            </footer>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     </body>
 </html>
