--- a/static/pillar-land.html
+++ b/static/pillar-land.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Template</title>
+        <title>Land-stored carbon</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">       
         <style>
             .nav-item{
@@ -17,7 +17,7 @@
                 <div class="col-md-12"></div>
             </div>
             <div class="collapse navbar-collapse justify-content-center text-center" id="navbarNav">
-                <ul class="navbar-nav mx-auto"> <!-- Added mx-auto class to center the navbar elements horizontally -->
+                <ul class="navbar-nav mx-auto">
                 <li class="nav-item px-3">
                     <a class="nav-link" href="#">Our Solution</a>
                 </li>
@@ -52,8 +52,8 @@
                 <p class="lead">Subtitle</p>
             </div>
         </div>
-        </div>
         <div class="divider"></div>
+        <!-- Entrepreneur highlight -->
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
               <div class="col-10 col-sm-8 col-lg-6">
@@ -70,40 +70,75 @@
             </div>
         </div>
         <div class="divider"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="box-left">
-                        <h2>About Us</h2>
-                        <ul>
-                            <li>Point 1</li>
-                            <li>Point 2</li>
-                            <li>Point 3</li>
-                        </ul>
-                    </div>
+        <!-- Facts and figures -->`
+        <div class="container col-xxl-8 px-4 py-5">
+            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+                <div class="col-lg-6">
+                    <h1 class="display-5 fw-bold lh-1 mb-3">Facts & Figures</h1>
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <h5 class="mb-1">Bullet point 1</h5>
+                            <p class="mb-0">Subtext for bullet point 1</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h5 class="mb-1">Bullet point 2</h5>
+                            <p class="mb-0">Subtext for bullet point 2</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h5 class="mb-1">Bullet point 3</h5>
+                            <p class="mb-0">Subtext for bullet point 3</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h5 class="mb-1">Bullet point 4</h5>
+                            <p class="mb-0">Subtext for bullet point 4</p>
+                        </li>
+                        <li class="list-group-item">
+                            <h5 class="mb-1">Bullet point 5</h5>
+                            <p class="mb-0">Subtext for bullet point 5</p>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-md-6">
-                    <div class="box-right">
-                        <h2>Quiz</h2>
-                        <form>
-                            <div class="form-group">
-                                <input type="radio" id="option1" name="quiz" value="option1">
-                                <label for="option1">Option 1</label>
-                            </div>
-                            <div class="form-group">
-                                <input type="radio" id="option2" name="quiz" value="option2">
-                                <label for="option2">Option 2</label>
-                            </div>
-                            <div class="form-group">
-                                <input type="radio" id="option3" name="quiz" value="option3">
-                                <label for="option3">Option 3</label>
-                            </div>
-                        </form>
-                    </div>
+                <div class="col-10 col-sm-8 col-lg-6">
+                    <img src="images/land-soil.jpg" class="d-block mx-lg-auto img-fluid" alt="FILL IN" width="700" height="500" loading="lazy">
                 </div>
             </div>
         </div>
+        <!-- Quiz -->
+        <div class="container col-xl-10 col-xxl-8 px-4 py-5">
+            <h1 class="display-5 fw-bold lh-1 mb-3">Quiz</h1>
+            <form>
+                <div class="mb-3">
+                    <h5>Question 1:</h5>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="question1" id="option1" value="option1">
+                        <label class="form-check-label" for="option1">
+                            Option 1
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="question1" id="option2" value="option2">
+                        <label class="form-check-label" for="option2">
+                            Option 2
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="question1" id="option3" value="option3">
+                        <label class="form-check-label" for="option3">
+                            Option 3
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="question1" id="option4" value="option4">
+                        <label class="form-check-label" for="option4">
+                            Option 4
+                        </label>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
         <div class="divider"></div>
+        <!-- Alternatives -->
         <div class="container">
             <p class="display-3">Alternatives</p>
             <div class="row">
