--- a/static/template.html
+++ b/static/template.html
@@ -17,7 +17,7 @@
                 <div class="col-md-12"></div>
             </div>
             <div class="collapse navbar-collapse justify-content-center text-center" id="navbarNav">
-                <ul class="navbar-nav mx-auto"> <!-- Added mx-auto class to center the navbar elements horizontally -->
+                <ul class="navbar-nav mx-auto">
                 <li class="nav-item px-3">
                     <a class="nav-link" href="#">Our Solution</a>
                 </li>
