--- a/static/faq.html
+++ b/static/faq.html
@@ -40,4 +40,30 @@
         </div>
     </nav>
     <!-- Body content here -->
+    <!--  ------------------------------------ -->
+    <div class="container">
+        <footer class="py-3 my-4">
+          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="#" class="nav-link px-3 text-muted"></a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-3 text-muted">Our Solution</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-3 text-muted">FAQ</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-3 text-muted">About Us</a></li>
+            <li class="nav-item dropdown text-muted">
+                <a class="nav-link px-3 dropdown-toggle text-muted" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Pillars
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Land</a></li>
+                <li><a class="dropdown-item" href="#">Ocean</a></li>
+                <li><a class="dropdown-item" href="#">Construction</a></li>
+                <li><a class="dropdown-item" href="#">Rock</a></li>
+                </ul>
+            </li>
+            <li class="nav-item"><a href="#" class="nav-link px-3 text-muted">Entrepreneurs</a></li>
+          </ul>
+          <p class="text-center text-muted">© 2024 CompSocSci</p>
+        </footer>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </html>
