made all pillar pages
and added the href to the navbar

--- a/static/pillar-rock.html
+++ b/static/pillar-rock.html
@@ -19,36 +19,36 @@
             <div class="collapse navbar-collapse justify-content-center text-center" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                 <li class="nav-item px-3">
-                    <a class="nav-link" href="#">Our Solution</a>
+                    <a class="nav-link" href="index.html">Our Solution</a>
                 </li>
                 <li class="nav-item px-3">
-                    <a class="nav-link" href="#">FAQ</a>
+                    <a class="nav-link" href="faq.html">FAQ</a>
                 </li>
                 <li class="nav-item px-3">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link" href="aboutus.html">About Us</a>
                 </li>
                 <li class="nav-item dropdown px-3">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Pillars
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown" data-bs-theme="dark">
-                    <li><a class="dropdown-item" href="#">Land</a></li>
-                    <li><a class="dropdown-item" href="#">Ocean</a></li>
-                    <li><a class="dropdown-item" href="#">Construction</a></li>
-                    <li><a class="dropdown-item" href="#">Rock</a></li>
+                    <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
+                    <li><a class="dropdown-item" href="pillar-ocean.html">Ocean</a></li>
+                    <li><a class="dropdown-item" href="pillar-construction.html">Construction</a></li>
+                    <li><a class="dropdown-item" href="pillar-rock.html">Rock</a></li>
                     </ul>
                 </li>
                 <li class="nav-item px-3">
-                    <a class="nav-link" href="#">Entrepreneurs</a>
+                    <a class="nav-link" href="entrepreneurs.html">Entrepreneurs</a>
                 </li>
                 </ul>
             </div>
             </div>
         </nav>
         <!--  ------------------------------------ -->
-        <div class="jumbotron jumbotron-fluid" style="background-image: url(images/land-stored-bg.jpg); background-size: cover; background-position: center center; height: 50vh;">
+        <div class="jumbotron jumbotron-fluid" style="background-image: url(https://images.pexels.com/photos/12123591/pexels-photo-12123591.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2); background-size: cover; background-position: center center; height: 50vh;">
             <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
-                <h1 class="display-4">Title</h1>
+                <h1 class="display-4">Rock-Stored Carbon</h1>
                 <p class="lead">Subtitle</p>
             </div>
         </div>
@@ -99,7 +99,7 @@
                     </ul>
                 </div>
                 <div class="col-10 col-sm-8 col-lg-6">
-                    <img src="images/land-soil.jpg" class="d-block mx-lg-auto img-fluid" alt="FILL IN" width="700" height="500" loading="lazy">
+                    <img src="images/rock.jpg" class="d-block mx-lg-auto img-fluid" alt="FILL IN" width="700" height="500" loading="lazy">
                 </div>
             </div>
         </div>
