--- a/static/entrepreneurs.html
+++ b/static/entrepreneurs.html
@@ -17,32 +17,32 @@
                 <div class="col-md-10"></div>
             </div>
             <div class="collapse navbar-collapse justify-content-center text-center" id="navbarNav">
-                <ul class="navbar-nav mx-auto">
-                <li class="nav-item px-3">
-                    <a class="nav-link" href="#">Our Solution</a>
-                </li>
-                <li class="nav-item px-3">
-                    <a class="nav-link" href="#">FAQ</a>
-                </li>
-                <li class="nav-item px-3">
-                    <a class="nav-link" href="#">About Us</a>
-                </li>
-                <li class="nav-item dropdown px-3">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Pillars
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">Land</a></li>
-                    <li><a class="dropdown-item" href="#">Ocean</a></li>
-                    <li><a class="dropdown-item" href="#">Construction</a></li>
-                    <li><a class="dropdown-item" href="#">Rock</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item px-3">
-                    <a class="nav-link" href="#">Entrepreneurs</a>
-                </li>
-                </ul>
-            </div>
+              <ul class="navbar-nav mx-auto">
+              <li class="nav-item px-3">
+                  <a class="nav-link" href="index.html">Our Solution</a>
+              </li>
+              <li class="nav-item px-3">
+                  <a class="nav-link" href="faq.html">FAQ</a>
+              </li>
+              <li class="nav-item px-3">
+                  <a class="nav-link" href="aboutus.html">About Us</a>
+              </li>
+              <li class="nav-item dropdown px-3">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Pillars
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown" data-bs-theme="dark">
+                  <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
+                  <li><a class="dropdown-item" href="pillar-ocean.html">Ocean</a></li>
+                  <li><a class="dropdown-item" href="pillar-construction.html">Construction</a></li>
+                  <li><a class="dropdown-item" href="pillar-rock.html">Rock</a></li>
+                  </ul>
+              </li>
+              <li class="nav-item px-3">
+                  <a class="nav-link" href="entrepreneurs.html">Entrepreneurs</a>
+              </li>
+              </ul>
+          </div>
             </div>
         </nav>
         <!-- Body content here -->
