--- a/static/pillar-rock.html
+++ b/static/pillar-rock.html
@@ -46,7 +46,7 @@
             </div>
         </nav>
         <!--  ------------------------------------ -->
-        <div class="jumbotron jumbotron-fluid" style="background-image: url(https://images.pexels.com/photos/12123591/pexels-photo-12123591.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2); background-size: cover; background-position: center center; height: 50vh;">
+        <div class="jumbotron jumbotron-fluid" style="background-image: url(https://images.pexels.com/photos/15639455/pexels-photo-15639455/free-photo-of-clouds-over-sea-waves-splashing-against-a-rocky-shore.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2; height: 50vh;">
             <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
                 <h1 class="display-4">Rock-Stored Carbon</h1>
                 <p class="lead">Subtitle</p>
@@ -57,11 +57,11 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
               <div class="col-10 col-sm-8 col-lg-6">
-                <img src="images/land-entrepreneur.jpg" class="d-block mx-lg-auto img-fluid" alt="ADD ALT TEXT" width="700" height="500" loading="lazy">
+                <img src="images/rock-entrepreneur.jpg" class="d-block mx-lg-auto img-fluid" alt="ADD ALT TEXT" width="700" height="500" loading="lazy">
               </div>
               <div class="col-lg-6">
                 <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Entrepreneur Highlight</h1>
-                <p class="lead">Entrepeneur working with nature based solutions on specific profitable thing with a lot of benefit to the environment.</p>
+                <p class="lead">InPlanet utilizes finely crushed silicate rocks spread over agricultural lands to capture atmospheric CO2, which not only helps reduce greenhouse gas concentrations but also enhances soil quality and agricultural productivity.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                   <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Read More</button>
                   <button type="button" class="btn btn-outline-secondary btn-lg px-4">See other stories</button>
@@ -77,16 +77,16 @@
                     <h1 class="display-5 fw-bold lh-1 mb-3">Facts & Figures</h1>
                     <ul class="list-group">
                         <li class="list-group-item">
-                            <h5 class="mb-1">Bullet point 1</h5>
-                            <p class="mb-0">Subtext for bullet point 1</p>
+                            <h5 class="mb-1">Silent Giants in Carbon Capture</h5>
+                            <p class="mb-0">Naturally, rocks weather away, quietly pulling approximately 1 billion tons of CO2 from our atmosphere each year—a slow but steady force against atmospheric carbon buildup.</p>
                         </li>
                         <li class="list-group-item">
-                            <h5 class="mb-1">Bullet point 2</h5>
-                            <p class="mb-0">Subtext for bullet point 2</p>
+                            <h5 class="mb-1">Olivine’s Superpower</h5>
+                            <p class="mb-0">Olivine, a humble green mineral abundant in magnesium and iron, could be a game-changer in carbon capture. Spread across agricultural lands, especially in the tropics, it has the potential to slash atmospheric CO2 dramatically, bolstering crop growth with its mineral-rich dust.</p>
                         </li>
                         <li class="list-group-item">
-                            <h5 class="mb-1">Bullet point 3</h5>
-                            <p class="mb-0">Subtext for bullet point 3</p>
+                            <h5 class="mb-1">Enhanced Weathering as a Modern Ally</h5>
+                            <p class="mb-0">By mimicking and accelerating natural geological processes, enhanced rock weathering aims to tackle modern climate challenges by rapidly converting atmospheric CO2 into stable mineral carbonates on land and in oceans.</p>
                         </li>
                         <li class="list-group-item">
                             <h5 class="mb-1">Bullet point 4</h5>
