--- a/static/pillar-land.html
+++ b/static/pillar-land.html
@@ -3,15 +3,16 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Land-stored carbon</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">       
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">      
+        <link rel="stylesheet" href="templates/style.css"> 
         <style>
             .nav-item{
-                font-size: 1.5rem;
+                font-size: 1.25rem;
             }
         </style>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #2f4831;">
             <div class="container">
             <div class="row">
                 <div class="col-md-12"></div>
@@ -19,17 +20,17 @@
             <div class="collapse navbar-collapse justify-content-center text-center" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                 <li class="nav-item px-3">
-                    <a class="nav-link" href="index.html">Our Solution</a>
+                    <a class="nav-link" href="index.html">OUR SOLUTION</a>
                 </li>
                 <li class="nav-item px-3">
                     <a class="nav-link" href="faq.html">FAQ</a>
                 </li>
                 <li class="nav-item px-3">
-                    <a class="nav-link" href="aboutus.html">About Us</a>
+                    <a class="nav-link" href="aboutus.html">ABOUT US</a>
                 </li>
                 <li class="nav-item dropdown px-3">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Pillars
+                    PILLARS
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown" data-bs-theme="dark">
                     <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
@@ -39,7 +40,7 @@
                     </ul>
                 </li>
                 <li class="nav-item px-3">
-                    <a class="nav-link" href="entrepreneurs.html">Entrepreneurs</a>
+                    <a class="nav-link" href="entrepreneurs.html">ENTREPRENEURS</a>
                 </li>
                 </ul>
             </div>
@@ -71,34 +72,63 @@
             </div>
         </div>
         <div class="divider"></div>
-        <!-- Facts and figures -->`
-        <div class="container col-xxl-8 px-4 py-5">
-            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-                <div class="col-lg-6">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">Facts & Figures</h1>
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <h5 class="mb-1">Soil</h5>
-                            <p class="mb-0">Soil is the second largest carbon reservoir, storing more carbon (1500 billion tonnes) than the atmosphere (750 billion tonnes) and vegetation (560 billion tonnes) combined!</p>
-                            <a href="https://climate.ec.europa.eu/system/files/2016-11/soil_and_climate_en.pdf">Source</a>
-                        </li>
-                        <li class="list-group-item">
-                            <h5 class="mb-1">Forests</h5>
-                            <p class="mb-0">One tree can absorb approximately 25 kg of CO2 per year, imagine how much entire forests can store.</p>
-                            <a href="https://ecotree.green/en/how-much-co2-does-a-tree-absorb#:~:text=A%20tree%20absorbs%20approximately%2025kg%20of%20CO2%20per%20year&text=But%20really%20a%20tree%20absorbs,a%20whole%20host%20of%20factors.">Source</a>
-                        </li>
-                        <li class="list-group-item">
-                            <h5 class="mb-1">Wetlands</h5>
-                            <p class="mb-0">Wetlands such as peatlands and mangroves can naturally absorb and store carbon!</p>
-                            <a href="https://www.ramsar.org/sites/default/files/documents/library/wwd19_handout_e.pdf">Source</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-10 col-sm-8 col-lg-6">
-                    <img src="https://images.pexels.com/photos/6111738/pexels-photo-6111738.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="d-block mx-lg-auto img-fluid" alt="FILL IN" width="700" height="700" loading="lazy">
-                </div>
+
+
+<!-- ======= facts and figures ======= -->
+<section id="facts" class="facts section-bg">
+
+    <div class="section-title">
+        <h1 class="display-5 fw-bold lh-1 mb-3">Facts & Figures</h1>
+      </div>
+
+    <div class="container">
+
+      <div class="row">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="card">
+            <img src="images/land-stored-bg.jpg" class="card-img-top" alt="...">
+            <div class="card-icon">
+              <i class="bx bx-book-reader"></i>
             </div>
+            <div class="card-body">
+              <h5 class="card-title">Soil</a></h5>
+              <p class="mb-0">Soil is the second largest carbon reservoir, storing more carbon (1500 billion tonnes) than the atmosphere (750 billion tonnes) and vegetation (560 billion tonnes) combined!</p>
+              <a href="https://climate.ec.europa.eu/system/files/2016-11/soil_and_climate_en.pdf">Source</a>
+           </div>
+          </div>
         </div>
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="card">
+            <img src="images/land-stored-bg.jpg" class="card-img-top" alt="...">
+            <div class="card-icon">
+              <i class="bx bx-calendar-edit"></i>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Forests</h5>
+                <p class="mb-0">One tree can absorb approximately 25 kg of CO2 per year, imagine how much entire forests can store.</p>
+                <a href="https://ecotree.green/en/how-much-co2-does-a-tree-absorb#:~:text=A%20tree%20absorbs%20approximately%2025kg%20of%20CO2%20per%20year&text=But%20really%20a%20tree%20absorbs,a%20whole%20host%20of%20factors.">Source</a>
+             </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="card">
+            <img src="images/land-stored-bg.jpg" class="card-img-top" alt="...">
+            <div class="card-icon">
+              <i class="bx bx-landscape"></i>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Wetlands</h5>
+                <p class="mb-0">Wetlands such as peatlands and mangroves can naturally absorb and store carbon!</p>
+                <a href="https://www.ramsar.org/sites/default/files/documents/library/wwd19_handout_e.pdf">Source</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
         <!-- Quiz -->
         <div class="container col-xl-10 col-xxl-8 px-4 py-5">
             <h1 class="display-5 fw-bold lh-1 mb-3">Quiz</h1>
@@ -158,7 +188,8 @@
                 </div><!-- /.col-lg-4 -->
             </div>
         </div>
-    
+
+
         <!--  ------------------------------------ -->
         <div class="container">
             <footer class="py-3 my-4">
