--- a/static/pillar-land.html
+++ b/static/pillar-land.html
@@ -11,6 +11,8 @@
             }
         </style>
     </head>
+
+    <!---- ======= Navbar ======= ---->
     <body>
         <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #2f4831;">
             <div class="container">
@@ -54,6 +56,7 @@
             </div>
         </div>
         <div class="divider"></div>
+
         <!-- Entrepreneur highlight -->
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
@@ -164,6 +167,8 @@
             </form>
         </div>
         <div class="divider"></div>
+
+        
         <!-- Alternatives -->
         <div class="container">
             <p class="display-3">Alternatives</p>
