--- a/static/pillar-land.html
+++ b/static/pillar-land.html
@@ -22,17 +22,17 @@
             <div class="collapse navbar-collapse justify-content-center text-center" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                 <li class="nav-item px-3">
-                    <a class="nav-link" href="index.html">OUR SOLUTION</a>
+                    <a class="nav-link" href="index.html">Our Solution</a>
                 </li>
                 <li class="nav-item px-3">
                     <a class="nav-link" href="faq.html">FAQ</a>
                 </li>
                 <li class="nav-item px-3">
-                    <a class="nav-link" href="aboutus.html">ABOUT US</a>
+                    <a class="nav-link" href="aboutus.html">About Us</a>
                 </li>
                 <li class="nav-item dropdown px-3">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    PILLARS
+                    Pillars
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown" data-bs-theme="dark">
                     <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
@@ -42,7 +42,7 @@
                     </ul>
                 </li>
                 <li class="nav-item px-3">
-                    <a class="nav-link" href="entrepreneurs.html">ENTREPRENEURS</a>
+                    <a class="nav-link" href="entrepreneurs.html">Entrepreneurs</a>
                 </li>
                 </ul>
             </div>
@@ -168,7 +168,7 @@
         </div>
         <div class="divider"></div>
 
-        
+
         <!-- Alternatives -->
         <div class="container">
             <p class="display-3">Alternatives</p>
