2nd Update pillar-rock.html

--- a/static/pillar-rock.html
+++ b/static/pillar-rock.html
@@ -88,14 +88,6 @@
                             <h5 class="mb-1">Enhanced Weathering as a Modern Ally</h5>
                             <p class="mb-0">By mimicking and accelerating natural geological processes, enhanced rock weathering aims to tackle modern climate challenges by rapidly converting atmospheric CO2 into stable mineral carbonates on land and in oceans.</p>
                         </li>
-                        <li class="list-group-item">
-                            <h5 class="mb-1">Bullet point 4</h5>
-                            <p class="mb-0">Subtext for bullet point 4</p>
-                        </li>
-                        <li class="list-group-item">
-                            <h5 class="mb-1">Bullet point 5</h5>
-                            <p class="mb-0">Subtext for bullet point 5</p>
-                        </li>
                     </ul>
                 </div>
                 <div class="col-10 col-sm-8 col-lg-6">
@@ -108,29 +100,29 @@
             <h1 class="display-5 fw-bold lh-1 mb-3">Quiz</h1>
             <form>
                 <div class="mb-3">
-                    <h5>Question 1:</h5>
+                    <h5>Question 1: Approximately how much CO2 is naturally removed from the atmosphere each year through the weathering of rocks?</h5>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="question1" id="option1" value="option1">
                         <label class="form-check-label" for="option1">
-                            Option 1
+                            10 million tons
                         </label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="question1" id="option2" value="option2">
                         <label class="form-check-label" for="option2">
-                            Option 2
+                            100 million tons
                         </label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="question1" id="option3" value="option3">
                         <label class="form-check-label" for="option3">
-                            Option 3
+                            1 billion tons
                         </label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="question1" id="option4" value="option4">
                         <label class="form-check-label" for="option4">
-                            Option 4
+                            10 billion tons
                         </label>
                     </div>
                 </div>
@@ -144,14 +136,14 @@
             <div class="row">
                 <div class="col-lg-4">
                   <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                  <h2 class="fw-normal">Alternative 1</h2>
-                  <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+                  <h2 class="fw-normal">Ryan Pape // UNDO</h2>
+                  <p>UNDO has focused on providing farmers with concrete, local field results that underline the efficacy of enhanced weathering. </p>
                   <p><a class="btn btn-secondary" href="#">View details »</a></p>
                 </div><!-- /.col-lg-4 -->
                 <div class="col-lg-4">
                   <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                  <h2 class="fw-normal">Alternative 2</h2>
-                  <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
+                  <h2 class="fw-normal">David Beerling</h2>
+                  <p>A key figure in the research and promotion of using basalt for enhanced weathering to capture carbon dioxide, which has implications for agricultural applications and climate change mitigation.</p>
                   <p><a class="btn btn-secondary" href="#">View details »</a></p>
                 </div><!-- /.col-lg-4 -->
                 <div class="col-lg-4">
