--- a/static/pillar-rock.html
+++ b/static/pillar-rock.html
@@ -77,6 +77,11 @@
                     <h1 class="display-5 fw-bold lh-1 mb-3">Facts & Figures</h1>
                     <ul class="list-group">
                         <li class="list-group-item">
+                            <h5 class="mb-1">Rock-stored carbon</h5>
+                            <p class="mb-0">Rock-stored carbon captures the imagination as much as it captures CO2, offering a potent natural solution. This method revolves around an ancient Earth process: the slow but steadfast weathering of silicate rocks. As these rocks gradually break down, they naturally react with carbon dioxide, locking it away as stable carbonate minerals—a process that has helped regulate the Earth's climate for millennia.
+                            </p>
+                        </li>
+                        <li class="list-group-item">
                             <h5 class="mb-1">Silent Giants in Carbon Capture</h5>
                             <p class="mb-0">Naturally, rocks weather away, quietly pulling approximately 1 billion tons of CO2 from our atmosphere each year—a slow but steady force against atmospheric carbon buildup.</p>
                         </li>
