--- a/static/pillar-rock.html
+++ b/static/pillar-rock.html
@@ -46,7 +46,7 @@
             </div>
         </nav>
         <!--  ------------------------------------ -->
-        <div class="jumbotron jumbotron-fluid" style="background-image: url(https://images.pexels.com/photos/15639455/pexels-photo-15639455/free-photo-of-clouds-over-sea-waves-splashing-against-a-rocky-shore.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2); height: 50vh;">
+        <div class="jumbotron jumbotron-fluid" style="background-image: url(images/rock-stored-bg.jpg); background-size: cover; background-position: center center; height: 50vh;">
             <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
                 <h1 class="display-4">Rock-Stored Carbon</h1>
                 <p class="lead">Subtitle</p>
@@ -96,7 +96,7 @@
                     </ul>
                 </div>
                 <div class="col-10 col-sm-8 col-lg-6">
-                    <img src="images/rock.jpg" class="d-block mx-lg-auto img-fluid" alt="FILL IN" width="700" height="500" loading="lazy">
+                    <img src=url(images/rock.jpg) class="d-block mx-lg-auto img-fluid" alt="FILL IN" width="700" height="500" loading="lazy">
                 </div>
             </div>
         </div>
