--- a/static/pillar-land.html
+++ b/static/pillar-land.html
@@ -89,7 +89,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="card">
-            <img src="images/land-stored-bg.jpg" class="card-img-top" alt="...">
+            <img src="https://images.pexels.com/photos/1443867/pexels-photo-1443867.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="card-img-top" alt="...">
             <div class="card-icon">
               <i class="bx bx-book-reader"></i>
             </div>
@@ -102,7 +102,7 @@
         </div>
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="card">
-            <img src="images/land-stored-bg.jpg" class="card-img-top" alt="...">
+            <img src="https://images.pexels.com/photos/109391/pexels-photo-109391.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="card-img-top" alt="...">
             <div class="card-icon">
               <i class="bx bx-calendar-edit"></i>
             </div>
@@ -115,7 +115,7 @@
         </div>
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="card">
-            <img src="images/land-stored-bg.jpg" class="card-img-top" alt="...">
+            <img src="https://images.pexels.com/photos/5645596/pexels-photo-5645596.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="card-img-top" alt="...">
             <div class="card-icon">
               <i class="bx bx-landscape"></i>
             </div>
