--- a/static/pillar-construction.html
+++ b/static/pillar-construction.html
@@ -35,7 +35,7 @@
                     Pillars
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown" data-bs-theme="dark">
-                    <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
+                    <li><a class="dropdown-item" href="pillar-Construction.html">Construction</a></li>
                     <li><a class="dropdown-item" href="pillar-ocean.html">Ocean</a></li>
                     <li><a class="dropdown-item" href="pillar-construction.html">Construction</a></li>
                     <li><a class="dropdown-item" href="pillar-rock.html">Rock</a></li>
@@ -49,9 +49,9 @@
             </div>
         </nav>
         <!--  ------------------------------------ -->
-        <div class="jumbotron jumbotron-fluid" style="background-image: url(images/land-stored-bg.jpg); background-size: cover; background-position: center center; height: 50vh;">
+        <div class="jumbotron jumbotron-fluid" style="background-image: url(images/Construction-stored-bg.jpg); background-size: cover; background-position: center center; height: 50vh;">
             <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
-                <h1 class="display-4">Land-Stored Carbon</h1>
+                <h1 class="display-4">Construction-Stored Carbon</h1>
                 <p class="lead">Key for storing carbon dioxide</p>
             </div>
         </div>
@@ -65,7 +65,7 @@
               </div>
               <div class="col-lg-6">
                 <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Entrepreneur Highlight</h1>
-                <p class="lead">Liesbeth van Bemmel is the founder and farmer of Voedselbos Benthuizen. Which transforms fields into vibrant food forests, nurturing both land and community.</p>
+                <p class="lead">Liesbeth van Bemmel is the founder and farmer of Voedselbos Benthuizen. Which transforms fields into vibrant food forests, nurturing both Construction and community.</p>
                 <p class="lead"> <i>'Food forests can feed us, make us happy and restore the planet. In fact it restores our relationship with nature.'</i> - Liesbeth</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                   <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Read More</button>
@@ -117,11 +117,11 @@
           <div class="card">
             <img src="https://images.pexels.com/photos/5645596/pexels-photo-5645596.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="card-img-top" alt="...">
             <div class="card-icon">
-              <i class="bx bx-landscape"></i>
+              <i class="bx bx-Constructionscape"></i>
             </div>
             <div class="card-body">
-                <h5 class="card-title">Wetlands</h5>
-                <p class="mb-0">Wetlands such as peatlands and mangroves can naturally absorb and store carbon!</p>
+                <h5 class="card-title">WetConstructions</h5>
+                <p class="mb-0">WetConstructions such as peatConstructions and mangroves can naturally absorb and store carbon!</p>
                 <a href="https://www.ramsar.org/sites/default/files/documents/library/wwd19_handout_e.pdf">Source</a>
             </div>
           </div>
@@ -208,7 +208,7 @@
                     Pillars
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">Land</a></li>
+                    <li><a class="dropdown-item" href="#">Construction</a></li>
                     <li><a class="dropdown-item" href="#">Ocean</a></li>
                     <li><a class="dropdown-item" href="#">Construction</a></li>
                     <li><a class="dropdown-item" href="#">Rock</a></li>
