--- a/static/pillar-construction.html
+++ b/static/pillar-construction.html
@@ -65,7 +65,7 @@
               </div>
               <div class="col-lg-6">
                 <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Entrepreneur Highlight</h1>
-                <p class="lead">Liesbeth van Bemmel is the founder and farmer of Voedselbos Benthuizen. Which transforms fields into vibrant food forests, nurturing both Construction and community.</p>
+                <p class="lead"> Ehab Sayed is the Founder of Biohm, which is a company that utilizes organic materials such as mycelium for building insulation and other construction materials.</p>
                 <p class="lead"> <i>'Food forests can feed us, make us happy and restore the planet. In fact it restores our relationship with nature.'</i> - Liesbeth</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                   <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Read More</button>
