--- a/static/pillar-construction.html
+++ b/static/pillar-construction.html
@@ -94,7 +94,7 @@
               <i class="bx bx-book-reader"></i>
             </div>
             <div class="card-body">
-              <h5 class="card-title">Soil</a></h5>
+              <h5 class="card-title"> Green Roofs and Walls </a></h5>
               <p class="mb-0">Soil is the second largest carbon reservoir, storing more carbon (1500 billion tonnes) than the atmosphere (750 billion tonnes) and vegetation (560 billion tonnes) combined!</p>
               <a href="https://climate.ec.europa.eu/system/files/2016-11/soil_and_climate_en.pdf">Source</a>
            </div>
@@ -107,7 +107,7 @@
               <i class="bx bx-calendar-edit"></i>
             </div>
             <div class="card-body">
-                <h5 class="card-title">Forests</h5>
+                <h5 class="card-title"> Renewable Energy </h5>
                 <p class="mb-0">One tree can absorb approximately 25 kg of CO2 per year, imagine how much entire forests can store.</p>
                 <a href="https://ecotree.green/en/how-much-co2-does-a-tree-absorb#:~:text=A%20tree%20absorbs%20approximately%2025kg%20of%20CO2%20per%20year&text=But%20really%20a%20tree%20absorbs,a%20whole%20host%20of%20factors.">Source</a>
              </div>
@@ -120,7 +120,7 @@
               <i class="bx bx-Constructionscape"></i>
             </div>
             <div class="card-body">
-                <h5 class="card-title">WetConstructions</h5>
+                <h5 class="card-title"> Living Shorelines </h5>
                 <p class="mb-0">WetConstructions such as peatConstructions and mangroves can naturally absorb and store carbon!</p>
                 <a href="https://www.ramsar.org/sites/default/files/documents/library/wwd19_handout_e.pdf">Source</a>
             </div>
