--- a/static/pillar-construction.html
+++ b/static/pillar-construction.html
@@ -102,7 +102,7 @@
         </div>
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="card">
-            <img src="https://images.pexels.com/photos/109391/pexels-photo-109391.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="card-img-top" alt="...">
+            <img src="greenroof.jpg" class="card-img-top" alt="...">
             <div class="card-icon">
               <i class="bx bx-calendar-edit"></i>
             </div>
