--- a/static/pillar-rock.html
+++ b/static/pillar-rock.html
@@ -3,7 +3,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Rock-stored carbon</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">       
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">      
+        <link rel="stylesheet" href="templates/style.css">  
         <style>
             .nav-item{
                 font-size: 1.5rem;
@@ -57,7 +58,7 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
               <div class="col-10 col-sm-8 col-lg-6">
-                <img src="images/rock-entrepreneur.jpg" class="d-block mx-lg-auto img-fluid" alt="ADD ALT TEXT" width="700" height="500" loading="lazy">
+                <img src="images/rock_entrepreneur.jpg" class="d-block mx-lg-auto img-fluid" alt="ADD ALT TEXT" width="700" height="500" loading="lazy">
               </div>
               <div class="col-lg-6">
                 <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Entrepreneur Highlight</h1>
@@ -74,32 +75,74 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                 <div class="col-lg-6">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">Facts & Figures</h1>
+                    <h1 class="display-5 fw-bold lh-1 mb-3">intro</h1>
                     <ul class="list-group">
                         <li class="list-group-item">
                             <h5 class="mb-1">Rock-stored carbon</h5>
                             <p class="mb-0">Rock-stored carbon captures the imagination as much as it captures CO2, offering a potent natural solution. This method revolves around an ancient Earth process: the slow but steadfast weathering of silicate rocks. As these rocks gradually break down, they naturally react with carbon dioxide, locking it away as stable carbonate minerals—a process that has helped regulate the Earth's climate for millennia.
                             </p>
                         </li>
-                        <li class="list-group-item">
-                            <h5 class="mb-1">Silent Giants in Carbon Capture</h5>
-                            <p class="mb-0">Naturally, rocks weather away, quietly pulling approximately 1 billion tons of CO2 from our atmosphere each year—a slow but steady force against atmospheric carbon buildup.</p>
-                        </li>
-                        <li class="list-group-item">
-                            <h5 class="mb-1">Olivine’s Superpower</h5>
-                            <p class="mb-0">Olivine, a humble green mineral abundant in magnesium and iron, could be a game-changer in carbon capture. Spread across agricultural lands, especially in the tropics, it has the potential to slash atmospheric CO2 dramatically, bolstering crop growth with its mineral-rich dust.</p>
-                        </li>
-                        <li class="list-group-item">
-                            <h5 class="mb-1">Enhanced Weathering as a Modern Ally</h5>
-                            <p class="mb-0">By mimicking and accelerating natural geological processes, enhanced rock weathering aims to tackle modern climate challenges by rapidly converting atmospheric CO2 into stable mineral carbonates on land and in oceans.</p>
-                        </li>
                     </ul>
-                </div>
-                <div class="col-10 col-sm-8 col-lg-6">
-                    <img src=url(images/rock.jpg) class="d-block mx-lg-auto img-fluid" alt="FILL IN" width="700" height="500" loading="lazy">
                 </div>
             </div>
         </div>
+
+<!-- ======= facts and figures ======= -->
+<section id="facts" class="facts section-bg">
+
+    <div class="section-title">
+        <h1 class="display-5 fw-bold lh-1 mb-3">Facts & Figures</h1>
+      </div>
+
+    <div class="container">
+
+      <div class="row">
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="card">
+            <img src="https://images.pexels.com/photos/1443867/pexels-photo-1443867.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="card-img-top" alt="...">
+            <div class="card-icon">
+              <i class="bx bx-book-reader"></i>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Silent Giants in Carbon Capture</a></h5>
+              <p class="mb-0">Naturally, rocks weather away, quietly pulling approximately 1 billion tons of CO2 from our atmosphere each year—a slow but steady force against atmospheric carbon buildup.</p>
+              <a href="#">Source</a>
+           </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="card">
+            <img src="https://images.pexels.com/photos/109391/pexels-photo-109391.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="card-img-top" alt="...">
+            <div class="card-icon">
+              <i class="bx bx-calendar-edit"></i>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Olivine’s Superpower</h5>
+                <p class="mb-0">Olivine, a humble green mineral abundant in magnesium and iron, could be a game-changer in carbon capture. Spread across agricultural lands, especially in the tropics, it has the potential to slash atmospheric CO2 dramatically, bolstering crop growth with its mineral-rich dust.</p>
+                <a href="#">Source</a>
+             </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="card">
+            <img src="https://images.pexels.com/photos/5645596/pexels-photo-5645596.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" class="card-img-top" alt="...">
+            <div class="card-icon">
+              <i class="bx bx-landscape"></i>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Enhanced Weathering as a Modern Ally</h5>
+                <p class="mb-0">By mimicking and accelerating natural geological processes, enhanced rock weathering aims to tackle modern climate challenges by rapidly converting atmospheric CO2 into stable mineral carbonates on land and in oceans.</p>
+                <a href="#">Source</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
+
         <!-- Quiz -->
         <div class="container col-xl-10 col-xxl-8 px-4 py-5">
             <h1 class="display-5 fw-bold lh-1 mb-3">Quiz</h1>
