--- a/static/pillar-construction.html
+++ b/static/pillar-construction.html
@@ -35,7 +35,7 @@
                     Pillars
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown" data-bs-theme="dark">
-                    <li><a class="dropdown-item" href="pillar-Construction.html">Construction</a></li>
+                    <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
                     <li><a class="dropdown-item" href="pillar-ocean.html">Ocean</a></li>
                     <li><a class="dropdown-item" href="pillar-construction.html">Construction</a></li>
                     <li><a class="dropdown-item" href="pillar-rock.html">Rock</a></li>
