--- a/static/faq.html
+++ b/static/faq.html
@@ -1,44 +1,131 @@
 <html>
-    <head></head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Land-stored carbon</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">      
+        <link rel="stylesheet" href="templates/style.css"> 
+        <style>
+            .nav-item{
+                font-size: 1.25rem;
+            }
+        </style>
+    </head>
+
+    <!---- ======= Navbar ======= ---->
     <body>
-        <!-- navbar here -->
+        <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #2f4831;">
+            <div class="container">
+            <div class="row">
+                <div class="col-md-12"></div>
+            </div>
+            <div class="collapse navbar-collapse justify-content-center text-center" id="navbarNav">
+                <ul class="navbar-nav mx-auto">
+                <li class="nav-item px-3">
+                    <a class="nav-link" href="index.html">Our Solution</a>
+                </li>
+                <li class="nav-item px-3">
+                    <a class="nav-link" href="faq.html">FAQ</a>
+                </li>
+                <li class="nav-item px-3">
+                    <a class="nav-link" href="aboutus.html">About Us</a>
+                </li>
+                <li class="nav-item dropdown px-3">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Pillars
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown" data-bs-theme="dark">
+                    <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
+                    <li><a class="dropdown-item" href="pillar-ocean.html">Ocean</a></li>
+                    <li><a class="dropdown-item" href="pillar-construction.html">Construction</a></li>
+                    <li><a class="dropdown-item" href="pillar-rock.html">Rock</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item px-3">
+                    <a class="nav-link" href="entrepreneurs.html">Entrepreneurs</a>
+                </li>
+                </ul>
+            </div>
+            </div>
+        </nav>
         <!-- frequently asked questions -->
+        <div class="jumbotron jumbotron-fluid" style="background-image: url(images/faq.jpg); background-size: cover; background-position: center center; height: 50vh; opacity: 0.8;">
+            <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
+                <h1 class="display-4" style="color: rgb(0, 0, 0);">FAQ</h1>
+                <p class="lead" style="color: rgb(0, 21, 0);">Frequently Asked Questions</p>
+            </div>
+        </div>
+        <div class="divider"></div>
+
+         <!-- ======= F.A.Q Section ======= -->
+
+    <section id="faq" class="faq">
+  
+          <ul class="faq-list">
+  
+            <li>
+              <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">Non consectetur a erat nam at lectus urna duis? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+              <div id="faq1" class="collapse" data-bs-parent=".faq-list">
+                <p>
+                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                </p>
+              </div>
+            </li>
+  
+            <li>
+              <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+              <div id="faq2" class="collapse" data-bs-parent=".faq-list">
+                <p>
+                  Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                </p>
+              </div>
+            </li>
+  
+            <li>
+              <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+              <div id="faq3" class="collapse" data-bs-parent=".faq-list">
+                <p>
+                  Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                </p>
+              </div>
+            </li>
+  
+            <li>
+              <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+              <div id="faq4" class="collapse" data-bs-parent=".faq-list">
+                <p>
+                  Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                </p>
+              </div>
+            </li>
+  
+            <li>
+              <div data-bs-toggle="collapse" href="#faq5" class="collapsed question">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+              <div id="faq5" class="collapse" data-bs-parent=".faq-list">
+                <p>
+                  Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
+                </p>
+              </div>
+            </li>
+  
+            <li>
+              <div data-bs-toggle="collapse" href="#faq6" class="collapsed question">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+              <div id="faq6" class="collapse" data-bs-parent=".faq-list">
+                <p>
+                  Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.
+                </p>
+              </div>
+            </li>
+  
+          </ul>
+  
+        </div>
+      </section><!-- End F.A.Q Section -->
+
+
         <!-- form to submit other questions -->
     </body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-        <div class="row">
-            <div class="col-md-12"></div>
-        </div>
-        <div class="collapse navbar-collapse justify-content-center text-center" id="navbarNav">
-            <ul class="navbar-nav mx-auto"> <!-- Added mx-auto class to center the navbar elements horizontally -->
-            <li class="nav-item">
-                <a class="nav-link" href="#">Our Solution</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">FAQ</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Pillars
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Land</a></li>
-                <li><a class="dropdown-item" href="#">Ocean</a></li>
-                <li><a class="dropdown-item" href="#">Construction</a></li>
-                <li><a class="dropdown-item" href="#">Rock</a></li>
-                </ul>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Entrepreneurs</a>
-            </li>
-            </ul>
-        </div>
-        </div>
-    </nav>
+   
     <!-- Body content here -->
     <!--  ------------------------------------ -->
     <div class="container">
