faq and style edits

--- a/static/pillar-land.html
+++ b/static/pillar-land.html
@@ -51,7 +51,7 @@
         <!--  ------------------------------------ -->
         <div class="jumbotron jumbotron-fluid" style="background-image: url(images/land-stored-bg.jpg); background-size: cover; background-position: center center; height: 50vh;">
             <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
-                <h1 class="display-4">Land-Stored Carbon</h1>
+                <h1 class="display-1">Land-Stored Carbon</h1>
                 <p class="lead">Key for storing carbon dioxide</p>
             </div>
         </div>
@@ -95,7 +95,7 @@
             </div>
             <div class="card-body">
               <h5 class="card-title">Soil</a></h5>
-              <p class="mb-0">Soil is the second largest carbon reservoir, storing more carbon (1500 billion tonnes) than the atmosphere (750 billion tonnes) and vegetation (560 billion tonnes) combined!</p>
+              <p class="mb-0">Soil is the second largest carbon reservoir, storing more carbon  <small class="text-body-secondary">(1500 billion tonnes)</small> than the atmosphere  <small class="text-body-secondary">(750 billion tonnes)</small> and vegetation  <small class="text-body-secondary">(560 billion tonnes)</small> combined!</p>
               <a href="https://climate.ec.europa.eu/system/files/2016-11/soil_and_climate_en.pdf">Source</a>
            </div>
           </div>
