--- a/static/pillar-rock.html
+++ b/static/pillar-rock.html
@@ -47,9 +47,9 @@
             </div>
         </nav>
         <!--  ------------------------------------ -->
-        <div class="jumbotron jumbotron-fluid" style="background-image: url(images/rock-stored-bg.jpg); background-size: cover; background-position: center center; height: 50vh;">
+        <div class="jumbotron jumbotron-fluid" style="background-image: url(images/rock-stored-bg.jpg); background-size: cover; background-position: center center; height: 50vh; opacity: 0.8">
             <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
-                <h1 class="display-4">Rock-Stored Carbon</h1>
+                <h1 class="display-1" style="opacity: 1">Rock-Stored Carbon</h1>
                 <p class="lead">Subtitle</p>
             </div>
         </div>
