--- a/static/pillar-construction.html
+++ b/static/pillar-construction.html
@@ -50,7 +50,7 @@
           </div>
       </nav>
         <!--  ------------------------------------ -->
-        <div class="jumbotron jumbotron-fluid" style="background-image: url('construction_.jpeg'); background-size: cover; background-position: center center; height: 50vh;">
+        <div class="jumbotron jumbotron-fluid" style="background-image: url('construction.jpeg'); background-size: cover; background-position: center center; height: 50vh;">
             <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
                 <h1 class="display-1">Construction-Stored Carbon</h1>
                 <p class="lead">Key for storing carbon dioxide</p>
