update of rock pillar + entrepreneur

--- a/static/pillar-rock.html
+++ b/static/pillar-rock.html
@@ -52,7 +52,7 @@
         <div class="jumbotron jumbotron-fluid" style="background-image: url(images/rock-stored-bg.jpg); background-size: cover; background-position: center center; height: 50vh; opacity: 0.8">
             <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
                 <h1 class="display-1" style="opacity: 1">Rock-Stored Carbon</h1>
-                <p class="lead">Subtitle</p>
+                <p class="lead">Key for storing carbon dioxide</p>
             </div>
         </div>
         <div class="divider"></div>
@@ -76,13 +76,16 @@
         <!-- Facts and figures -->`
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-                <div class="col-lg-6">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">intro</h1>
+              <div class="col-10 col-sm-8 col-lg-6">
+                <h3 class="mb-1">About Rock-stored carbon</h5>
+                <p class="mb-0">Rock-stored carbon captures the imagination as much as it captures CO2, offering a potent natural solution. This method revolves around an ancient Earth process: the slow but steadfast weathering of silicate rocks. As these rocks gradually break down, they naturally react with carbon dioxide, locking it away as stable carbonate minerals—a process that has helped regulate the Earth's climate for millennia.
+                </p>  
+              </div>  
+              <div class="col-lg-6">
                     <ul class="list-group">
                         <li class="list-group-item">
-                            <h5 class="mb-1">Rock-stored carbon</h5>
-                            <p class="mb-0">Rock-stored carbon captures the imagination as much as it captures CO2, offering a potent natural solution. This method revolves around an ancient Earth process: the slow but steadfast weathering of silicate rocks. As these rocks gradually break down, they naturally react with carbon dioxide, locking it away as stable carbonate minerals—a process that has helped regulate the Earth's climate for millennia.
-                            </p>
+                          <img src="images/rocks.jpg" class="d-block mx-lg-auto img-fluid" alt="ADD ALT TEXT" width="700" height="500" loading="lazy">  
+                          
                         </li>
                     </ul>
                 </div>
