FAQ page draft 2

--- a/static/index.html
+++ b/static/index.html
@@ -13,10 +13,9 @@
     </head>
 
     <body>
-        
         <!-- Body content here -->
         <!-- top of landing page + parallax -->
-        <section style="background-image: url(images/land-stored-bg.jpg);">
+        <section style="background-image: url(images/land-stored-bg.jpg);" class="top-image">
             <nav class="navbar navbar-expand-lg navbar-transparent">
                 <div class="container">
                 <div class="row">
