images and text edits

--- a/static/pillar-rock.html
+++ b/static/pillar-rock.html
@@ -47,7 +47,7 @@
         </div>
       </nav>
         <!--  ------------------------------------ -->
-        <div class="jumbotron jumbotron-fluid" style="background-image: url('images/pexels-nicobecker-5667394.png'); background-size: cover; background-position: center center; height: 50vh;">
+        <div class="jumbotron jumbotron-fluid" style="background-image: url('https://images.pexels.com/photos/1771265/pexels-photo-1771265.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); background-size: cover; background-position: center center; height: 50vh;">
             <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
                 <h1 class="display-1" style="opacity: 1">Rock-Stored Carbon</h1>
                 <p class="lead">Key for storing carbon dioxide</p>
