alomst done with land

--- a/static/entrepreneurs.html
+++ b/static/entrepreneurs.html
@@ -131,7 +131,7 @@
           <!-- Entrepreneur featurettes -->
           <div class="row featurette">
             <div class="col-md-7">
-              <h2 class="featurette-heading">Liesbeth Benthuizen. <span class="text-muted">Voedselbos</span></h2>
+              <h2 class="featurette-heading">Liesbeth Benthuizen. <span class="text-muted">Voedselbos Benthuizen</span></h2>
               <p class="lead">Liesbeth van Bemmel, founder and farmer of Voedselbos Benthuizen, transformed a field into a thriving food forest where members can harvest, plant trees, and enjoy nature. This winter, 
                 they planted many new trees and hosted various activities, including guided tours and events. Liesbeth was inspired by the negative impacts of modern lifestyles on nature and personal health, leading her to create a solution that benefits both. She believes that caring for the planet improves personal well-being and restores our connection to nature.
                  Liesbeth's training program helps others start their own food forests. She emphasizes the importance of integrating with nature and shifting values from monetary wealth to ecological richness </p>
@@ -158,7 +158,7 @@
           
            <div class="row featurette">
             <div class="col-md-7">
-              <h2 class="featurette-heading">Carl Mintjens. <span class="text-muted">Bamboologic</span></h2>
+              <h2 class="featurette-heading">Carl Mintjens. <span class="text-muted">Bamboo Logic</span></h2>
               <p class="lead">Carl Mintjens is planting bamboo in the view of his furniture making company. Always searching for ways to make his production process more sustainable, Carl has chosen to pioneer with bamboo farming in Belgium, starting with this first plot in the Kempen region (Blommerschot village).
                 <break></break>
                 Carl is also aware of the positive effects of bamboo for climate, soil and biodiversity. The combination of the economic value of bamboo and the positive environmental effects are a true value throughout Carl’s story.
@@ -206,6 +206,17 @@
               <div class="col-md-5 order-md-1">
                 <img class="featurette-image img-fluid mx-auto rounded-4" data-src="images/entrepreneurs/eddy.jpeg" alt="500x500" style="width: 500px; height: 500px;" src="images/entrepreneurs/georgesquare.jpg" data-holder-rendered="true">
               </div>
+             </div>
+             <hr class="featurette-divider">
+
+             <div class="row featurette">
+               <div class="col-md-7">
+                 <h2 class="featurette-heading">Heleen Elshuis. <span class="text-muted">Bosnodig</span></h2>
+                 <p class="lead">In Voorst in Gelderland, four hectares of grassland are steadily changing into a sustainable and richly varied nature area, much of which will consist of (edible) forest. The idea behind Bosnodig is simple, but there is an unprecedented power and beauty in it. Bosnodig shows what we seem to have forgotten: the forest as a source of life. It is a social, educational and recreational nature place, but also a source of food, inspiration and connection. For now and future generations.</p>
+                </div>
+               <div class="col-md-5">
+                 <img class="featurette-image img-fluid mx-auto rounded-4" data-src="images/entrepreneurs/heleensquare.jpg" alt="500x500" style="width: 500px; height: 500px;" src="images/entrepreneurs/helleensquare.jpg" data-holder-rendered="true">
+               </div>
              </div>
              <hr class="featurette-divider">
 
