--- a/static/pillar-land.html
+++ b/static/pillar-land.html
@@ -47,10 +47,10 @@
       </div>
     </nav>
   
-  <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 80%;">
-      <h1 class="display-1 title">Land Stored Carbon</h1>
-      <!-- <p class="lead">Maybe the future isn't all smokestacks and screens?</p> -->
-  </div>
+    <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 80%;">
+      <h1 class="display-1 title" style="text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.65);">Land-Stored Carbon</h1>
+    </div>
+    
 
 
   <div class="waveTrans" id="waveTrans1" style="--i:1; background-image: url(images/wave.png);"></div>
@@ -72,8 +72,7 @@
                 <p class="lead">Liesbeth van Bemmel is the founder and farmer of Voedselbos Benthuizen. Which transforms fields into vibrant food forests, nurturing both land and community.</p>
                 <p class="lead"> <i>'Food forests can feed us, make us happy and restore the planet. In fact it restores our relationship with nature.'</i> - Liesbeth</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                  <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Read More</button>
-                  <button type="button" class="btn btn-outline-secondary btn-lg px-4">See other stories</button>
+                  <button type="button" class="btn btn-primary btn-lg px-4 me-md-2" href="entrepreneurs.html">Read Other Stories</button>
                 </div>
               </div>
             </div>
@@ -84,11 +83,10 @@
 
         <!-- ======= about pillar ======= -->
         <div class="p-5 text-center bg-body-tertiary rounded-3">
-          <img width="100" height="100" style="margin-bottom: 20px;" src="images/logo.png"></img>
-          <h1 class="text-body-emphasis">What are nature based solutions?</h1>
+          <i class="bi bi-tree-fill"width="100" height="100"></i>
+          <h1 class="text-body-emphasis">What is Land-stored carbon?</h1>
           <p class="col-lg-8 mx-auto fs-5 text-muted">
-              Nature based solutions (or NBS) are actions to <strong>protect, sustainably manage and restore</strong> both natural ecosystems and modified ecosystems. Addressing societal challenges effectively and adaptively, simultaneously <strong>benefiting people and nature.</strong>
-          </p>
+            Land stored carbon in NBS refers to carbon stored in <strong>natural ecosystems </strong>such as, wetlands, grasslands, and soils, contributing to climate change mitigation and <strong>ecosystem health. </strong>         </p>
       </div>
 
 
@@ -145,33 +143,31 @@
 
     </div>
   </section>
-        <div class="divider"></div>
+  <div class="divider"></div>
 
-
-        <!-- Alternatives -->
-        <div class="container">
-            <p class="display-3">Alternatives</p>
-            <div class="row">
-                <div class="col-lg-4">
-                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                  <h2 class="fw-normal">Alternative 1</h2>
-                  <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-                  <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-lg-4">
-                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                  <h2 class="fw-normal">Alternative 2</h2>
-                  <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-                  <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-lg-4">
-                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                  <h2 class="fw-normal">Alternative 3</h2>
-                  <p>And lastly this, the third column of representative placeholder content.</p>
-                  <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div><!-- /.col-lg-4 -->
-            </div>
+  <!-- Entrepreneur highlight 2 -->
+  <div class="container col-xxl-8 px-4 py-5">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="col-lg-6">
+        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Entrepreneur Highlight</h1>
+        <p class="lead">In Voorst in Gelderland, four hectares of grassland are steadily changing into a sustainable and richly varied nature area, much of which will consist of (edible) forest. The idea behind Bosnodig is simple, but there is an unprecedented power and beauty in it. Bosnodig shows what we seem to have forgotten: the forest as a source of life. It is a social, educational and recreational nature place, but also a source of food, inspiration and connection. For now and future generations.</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Read Other Stories</button>
         </div>
+      </div>
+      <div class="col-10 col-sm-8 col-lg-6">
+        <img src="images/entrepreneurs/heleenpillar.jpg" class="d-block mx-lg-auto img-fluid" alt="ADD ALT TEXT" width="700" height="500" loading="lazy">
+      </div>
+    </div>
+  </div>
+  <div class="divider"></div>
+  
+
+  <div class="jumbotron jumbotron-fluid" style="background-image: url(images/rice.jpg); background-size: cover; background-position: center center; height: 70vh; opacity:85%">
+    <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
+    </div>
+</div>
+<div class="divider"></div>
 
 
         <!--  ---------------- Footer -------------------- -->
