land finished and rock almost just the icon

--- a/static/pillar-land.html
+++ b/static/pillar-land.html
@@ -72,7 +72,9 @@
                 <p class="lead">Liesbeth van Bemmel is the founder and farmer of Voedselbos Benthuizen. Which transforms fields into vibrant food forests, nurturing both land and community.</p>
                 <p class="lead"> <i>'Food forests can feed us, make us happy and restore the planet. In fact it restores our relationship with nature.'</i> - Liesbeth</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                  <button type="button" class="btn btn-primary btn-lg px-4 me-md-2" href="entrepreneurs.html">Read Other Stories</button>
+                  <a href="entrepreneurs.html">
+                  <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Read Other Stories</button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -83,7 +85,9 @@
 
         <!-- ======= about pillar ======= -->
         <div class="p-5 text-center bg-body-tertiary rounded-3">
-          <i class="bi bi-tree-fill"width="100" height="100"></i>
+          <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-tree" viewBox="0 0 16 16">
+            <path d="M8.416.223a.5.5 0 0 0-.832 0l-3 4.5A.5.5 0 0 0 5 5.5h.098L3.076 8.735A.5.5 0 0 0 3.5 9.5h.191l-1.638 3.276a.5.5 0 0 0 .447.724H7V16h2v-2.5h4.5a.5.5 0 0 0 .447-.724L12.31 9.5h.191a.5.5 0 0 0 .424-.765L10.902 5.5H11a.5.5 0 0 0 .416-.777zM6.437 4.758A.5.5 0 0 0 6 4.5h-.066L8 1.401 10.066 4.5H10a.5.5 0 0 0-.424.765L11.598 8.5H11.5a.5.5 0 0 0-.447.724L12.69 12.5H3.309l1.638-3.276A.5.5 0 0 0 4.5 8.5h-.098l2.022-3.235a.5.5 0 0 0 .013-.507"/>
+          </svg>
           <h1 class="text-body-emphasis">What is Land-stored carbon?</h1>
           <p class="col-lg-8 mx-auto fs-5 text-muted">
             Land stored carbon in NBS refers to carbon stored in <strong>natural ecosystems </strong>such as, wetlands, grasslands, and soils, contributing to climate change mitigation and <strong>ecosystem health. </strong>         </p>
@@ -152,7 +156,9 @@
         <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Entrepreneur Highlight</h1>
         <p class="lead">In Voorst in Gelderland, four hectares of grassland are steadily changing into a sustainable and richly varied nature area, much of which will consist of (edible) forest. The idea behind Bosnodig is simple, but there is an unprecedented power and beauty in it. Bosnodig shows what we seem to have forgotten: the forest as a source of life. It is a social, educational and recreational nature place, but also a source of food, inspiration and connection. For now and future generations.</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Read Other Stories</button>
+          <a href="entrepreneurs.html">
+            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Read Other Stories</button>
+            </a>
         </div>
       </div>
       <div class="col-10 col-sm-8 col-lg-6">
