--- a/static/pillar-rock.html
+++ b/static/pillar-rock.html
@@ -50,8 +50,7 @@
     </nav>
   
   <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 80%;">
-      <h1 class="display-1 title">Rock Stored Carbon</h1>
-      <!-- <p class="lead">Maybe the future isn't all smokestacks and screens?</p> -->
+      <h1 class="display-1 title">Rock-Stored Carbon</h1>
   </div>
 
 
@@ -71,8 +70,9 @@
                 <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Entrepreneur Highlight</h1>
                 <p class="lead">InPlanet utilizes finely crushed silicate rocks spread over agricultural lands to capture atmospheric CO2, which not only helps reduce greenhouse gas concentrations but also enhances soil quality and agricultural productivity.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                  <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Read More</button>
-                  <button type="button" class="btn btn-outline-secondary btn-lg px-4">See other stories</button>
+                  <a href="entrepreneurs.html">
+                    <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Read Other Stories</button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -81,11 +81,12 @@
 
 <!-- ======= about pillar ======= -->
         <div class="p-5 text-center bg-body-tertiary rounded-3">
-          <img width="100" height="100" style="margin-bottom: 20px;" src="images/logo.png"></img>
+          <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
+            <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
+          </svg>
           <h1 class="text-body-emphasis">What is rock stored carbon?</h1>
           <p class="col-lg-8 mx-auto fs-5 text-muted">
-            Rock-stored carbon captures the imagination as much as it captures CO2, offering a potent natural solution. This method revolves around an ancient Earth process: the slow but steadfast weathering of silicate rocks. As these rocks gradually break down, they naturally react with carbon dioxide, locking it away as stable carbonate minerals—a process that has helped regulate the Earth's climate for millennia.
-          </p>
+            Rock stored carbon refers to carbon captured in <strong>geological formations</strong>, locking it away in stable minerals and aiding <strong>long-term</strong> climate change mitigation and environmental protection.</p>
       </div>
 
 
@@ -145,66 +146,28 @@
 
 
 
-        <!-- Quiz -->
-        <div class="container col-xl-10 col-xxl-8 px-4 py-5">
-            <h1 class="display-5 fw-bold lh-1 mb-3">Quiz</h1>
-            <form>
-                <div class="mb-3">
-                    <h5>Question 1: Approximately how much CO2 is naturally removed from the atmosphere each year through the weathering of rocks?</h5>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="question1" id="option1" value="option1">
-                        <label class="form-check-label" for="option1">
-                            10 million tons
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="question1" id="option2" value="option2">
-                        <label class="form-check-label" for="option2">
-                            100 million tons
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="question1" id="option3" value="option3">
-                        <label class="form-check-label" for="option3">
-                            1 billion tons
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="question1" id="option4" value="option4">
-                        <label class="form-check-label" for="option4">
-                            10 billion tons
-                        </label>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+  <!-- Entrepreneur highlight 2 -->
+  <div class="container col-xxl-8 px-4 py-5">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="col-lg-6">
+        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Entrepreneur Highlight</h1>
+        <p class="lead">GreenSand is the worlds’ first sand and rock trading company purposely deploying olivine sand for CO2 uptake to reverse global warming. With 15 years of experience, greenSand have their proprietary carbon accounting solution, that shows exactly on a map where and when the olivine sand is applied and thus the carbon is sequestered.</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <a href="entrepreneurs.html">
+            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Read Other Stories</button>
+            </a>
         </div>
-        <div class="divider"></div>
-        <!-- Alternatives -->
-        <div class="container">
-            <p class="display-3">Alternatives</p>
-            <div class="row">
-                <div class="col-lg-4">
-                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                  <h2 class="fw-normal">Ryan Pape // UNDO</h2>
-                  <p>UNDO has focused on providing farmers with concrete, local field results that underline the efficacy of enhanced weathering. </p>
-                  <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-lg-4">
-                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                  <h2 class="fw-normal">David Beerling</h2>
-                  <p>A key figure in the research and promotion of using basalt for enhanced weathering to capture carbon dioxide, which has implications for agricultural applications and climate change mitigation.</p>
-                  <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-lg-4">
-                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                  <h2 class="fw-normal">Alternative 3</h2>
-                  <p>And lastly this, the third column of representative placeholder content.</p>
-                  <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div><!-- /.col-lg-4 -->
-            </div>
-        </div>
-    
+      </div>
+      <div class="col-10 col-sm-8 col-lg-6">
+        <img src="https://greensand.com/cdn/shop/articles/eddywijnker-bigbags_1_502x.jpg?v=1663835375" class="d-block mx-lg-auto img-fluid" alt="ADD ALT TEXT" width="700" height="500" loading="lazy">
+      </div>
+    </div>
+  </div>
+  <div class="divider"></div>
+
+
+
+
          <!--  ---------------- Footer -------------------- -->
          <div class="container">
           <footer class="py-3 my-4">
