--- a/static/pillar-ocean.html
+++ b/static/pillar-ocean.html
@@ -11,10 +11,10 @@
                 font-size: 1.5rem;
             }
             .facts .card-icon i {
-              background-color: #7fbadc;
+              background-color: #436a9d;
             }
             .section-bg {
-              background-color: #17646512;
+              background-color: #295d9c12;
             }
         </style>
     </head>
@@ -55,8 +55,7 @@
     </nav>
   
   <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 80%;">
-      <h1 class="display-1 title">Ocean Stored Carbon</h1>
-      <!-- <p class="lead">Maybe the future isn't all smokestacks and screens?</p> -->
+      <h1 class="display-1 title">Ocean-Stored Carbon</h1>
   </div>
 
 
