--- a/static/pillar-rock.html
+++ b/static/pillar-rock.html
@@ -9,6 +9,13 @@
             .nav-item{
                 font-size: 1.5rem;
             }
+
+            .facts .card-icon i {
+              background-color: #384f43;
+            }
+            .section-bg {
+              background-color: #5b887412;
+            }
         </style>
     </head>
     <body>
