Finished construction stored carbon

--- a/static/index.html
+++ b/static/index.html
@@ -149,21 +149,16 @@
         <br>
         <br>
         <br>
-        
-        <div class="jumbotron jumbotron-fluid" style="background-image: url(images/landing-bottom-banner.jpg); background-size: cover; background-position: center center; height: 70vh;">
-            <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
-                <h1 class="display-1 big">What can I do?</h1>
-                <ul>
-                    <li class="list-group-item" style="color: #4a4b4f;">Start your own NBS business.</li>
-                    <li class="list-group-item" style="color: #4a4b4f;">Join an existing NBS company.</li>
-                    <li class="list-group-item" style="color: #4a4b4f;">Invest in NBS initiatives.</li>
-                    <li class="list-group-item" style="color: #4a4b4f;">Support organizations and policies working on NBS projects.</li>
-                </ul>
-            </div>
+        <div class="p-5 mb-4 bg-light rounded-3">
+            <div class="container-fluid py-5">
+              <h1 class="display-5 fw-bold">What can I do?</h1>
+              <p class="col-md-8 fs-4">Start your own NBS business.</p>
+              <p class="col-md-8 fs-4">Join an existing NBS company.</p>
+              <p class="col-md-8 fs-4">Invest in NBS initiatives.</p>
+              <p class="col-md-8 fs-4">Support organisations and policies working on NBS projects.</p>
             </div>
         </div>
         <div class="divider"></div>
-
         <div class="container">
             <footer class="py-3 my-4">
                 <ul class="nav justify-content-center border-bottom pb-3 mb-3">
