--- a/static/pillar-construction.html
+++ b/static/pillar-construction.html
@@ -5,9 +5,16 @@
         <title>Construction-stored carbon</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">      
         <link rel="stylesheet" href="templates/style.css"> 
+        <link rel="icon" href="images/logo.svg">   
         <style>
             .nav-item{
                 font-size: 1.5rem;
+            }
+            .facts .card-icon i {
+              background-color: #ffcc00;
+            }
+            .section-bg {
+              background-color: #5c651712;
             }
         </style>
     </head>
@@ -50,7 +57,6 @@
   
   <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 80%;">
       <h1 class="display-1 title">Construction Stored Carbon</h1>
-      <!-- <p class="lead">Maybe the future isn't all smokestacks and screens?</p> -->
   </div>
 
 
@@ -64,29 +70,33 @@
         <!-- Entrepreneur highlight -->
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-              <div class="col-10 col-sm-8 col-lg-6">
-                <img src="https://media.licdn.com/dms/image/D4E03AQEYe643Szofhg/profile-displayphoto-shrink_400_400/0/1680527971193?e=1721260800&v=beta&t=1Z6Iml5Slj3ZW9dSilkPrlOkmGSQ2DJ6UQqlbB-zA8A" class="d-block mx-lg-auto img-fluid" alt="ADD ALT TEXT" width="700" height="500" loading="lazy">
+              <div class="col-10 col-sm-8 col-lg-6 rounded-4">
+                <img src="https://media.licdn.com/dms/image/D4E03AQEYe643Szofhg/profile-displayphoto-shrink_400_400/0/1680527971193?e=1721260800&v=beta&t=1Z6Iml5Slj3ZW9dSilkPrlOkmGSQ2DJ6UQqlbB-zA8A" class="d-block mx-lg-auto img-fluid rounded-4" alt="ADD ALT TEXT" width="700" height="500" loading="lazy">
               </div>
               <div class="col-lg-6">
                 <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Entrepreneur Highlight</h1>
                 <p class="lead"> Ehab Sayed is the Founder of Biohm, which is a company that utilizes organic materials such as mycelium for building insulation and other construction materials.</p>
                 <p class="lead"> <i>'The circular economy is about adding as much value as possible at every stage, extending the lifespan of the materials.'</i> - Ehab </p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                  <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Read More</button>
-                  <button type="button" class="btn btn-outline-secondary btn-lg px-4">See other stories</button>
+                  <a href="entrepreneurs.html">
+                    <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Read More</button>
+                  </a>
                 </div>
               </div>
             </div>
         </div>
         <div class="divider"></div>
 <!-- ======= about pillar ======= -->
-        <div class="p-5 text-center bg-body-tertiary rounded-3">
-          <img width="100" height="100" style="margin-bottom: 20px;" src="images/logo.png"></img>
-          <h1 class="text-body-emphasis">What is construction stored carbon?</h1>
-          <p class="col-lg-8 mx-auto fs-5 text-muted">
-              Nature based solutions (or NBS) are actions to <strong>protect, sustainably manage and restore</strong> both natural ecosystems and modified ecosystems. Addressing societal challenges effectively and adaptively, simultaneously <strong>benefiting people and nature.</strong>
-          </p>
-      </div>
+<div class="p-5 text-center bg-body-tertiary rounded-3">
+  <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-buildings" viewBox="0 0 16 16">
+    <path d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022M6 8.694 1 10.36V15h5zM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5z"/>
+    <path d="M2 11h1v1H2zm2 0h1v1H4zm-2 2h1v1H2zm2 0h1v1H4zm4-4h1v1H8zm2 0h1v1h-1zm-2 2h1v1H8zm2 0h1v1h-1zm2-2h1v1h-1zm0 2h1v1h-1zM8 7h1v1H8zm2 0h1v1h-1zm2 0h1v1h-1zM8 5h1v1H8zm2 0h1v1h-1zm2 0h1v1h-1zm0-2h1v1h-1z"/>
+  </svg>
+  <h1 class="text-body-emphasis">Construction-stored carbon</h1>
+  <p class="col-lg-8 mx-auto fs-5 text-muted">
+    Carbon can be sequestered from the atmosphere through sustainable building materials and practices. There is a lot of potential in aligning our urban ways of living with nature by installing green spaces on our buildings, or using more sustainable materials to reduce and reclaim carbon from our atmosphere.
+  </p>
+</div>
 
 
 <!-- ======= facts and figures ======= -->
@@ -142,71 +152,24 @@
 
     </div>
   </section>
-
-
-        <!-- Quiz -->
-        <div class="container col-xl-10 col-xxl-8 px-4 py-5">
-            <h1 class="display-5 fw-bold lh-1 mb-3">Quiz</h1>
-            <form>
-                <div class="mb-3">
-                    <h5>Question 1:</h5>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="question1" id="option1" value="option1">
-                        <label class="form-check-label" for="option1">
-                            Option 1
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="question1" id="option2" value="option2">
-                        <label class="form-check-label" for="option2">
-                            Option 2
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="question1" id="option3" value="option3">
-                        <label class="form-check-label" for="option3">
-                            Option 3
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="question1" id="option4" value="option4">
-                        <label class="form-check-label" for="option4">
-                            Option 4
-                        </label>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+  <!-- Entrepreneur highlight -->
+  <div class="container col-xxl-8 px-4 py-5">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="col-lg-6">
+        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Entrepreneur Highlight</h1>
+        <p class="lead">Jan-Willem van de Groep is a leading figure in sustainable construction, renowned for his work in energy efficiency, renewable energy, and innovative building materials. As the founder of "Factory Zero," he develops energy-neutral homes by integrating heating, ventilation, and energy generation into the construction process. Jan-Willem advocates for systemic change in the construction industry through initiatives like Building Transition, promoting sustainable practices via policy, education, and collaboration. His projects, including "Building the Future," focus on circular construction and material reuse, aiming to reduce carbon footprints and enhance lifecycle impacts. Jan-Willem is a prominent speaker on the transition to a circular economy in construction.</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <a href="entrepreneurs.html">
+            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Read More</button>
+          </a>
         </div>
-        <div class="divider"></div>
-
-
-        <!-- Alternatives -->
-        <div class="container">
-            <p class="display-3">Alternatives</p>
-            <div class="row">
-                <div class="col-lg-4">
-                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                  <h2 class="fw-normal">Alternative 1</h2>
-                  <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-                  <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-lg-4">
-                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                  <h2 class="fw-normal">Alternative 2</h2>
-                  <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-                  <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-lg-4">
-                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                  <h2 class="fw-normal">Alternative 3</h2>
-                  <p>And lastly this, the third column of representative placeholder content.</p>
-                  <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div><!-- /.col-lg-4 -->
-            </div>
-        </div>
-
-
+      </div>
+      <div class="col-10 col-sm-8 col-lg-6 rounded-4">
+        <img src="images/jan-willem.jpeg" class="d-block mx-lg-auto img-fluid rounded-4" alt="Jan Willem van de Groep" width="700" height="500" loading="lazy">
+      </div>    
+    </div>
+  </div>
+          
           <!--  ---------------- Footer -------------------- -->
           <div class="container">
             <footer class="py-3 my-4">
