Finished landing page

--- a/static/index.html
+++ b/static/index.html
@@ -158,6 +158,22 @@
               <p class="col-md-8 fs-4">Support organisations and policies working on NBS projects.</p>
             </div>
         </div>
+
+        <!-- about us -->
+        <div class="p-5 text-center bg-body-tertiary rounded-3">
+            <img width="140" height="100" style="margin-bottom: 20px;" src="images/compSocSci-logo.JPG"></img>
+            <h1 class="text-body-emphasis">About us</h1>
+            <p class="col-lg-8 mx-auto fs-5 text-muted">
+                This website is an initiative from students at the University of Amsterdam, in the bachelor <strong>Computational Social Science</strong>, meant to raise initiative and awareness about the importance of nature based solutions. We're a small group of students who want to make positive societal change through digital interventions. This website was made in guidance with the <strong>Climate Cleanup</strong> organisation.
+            </p>
+        </div>
+        <div class="p-5 text-center bg-body-tertiary rounded-3">
+            <img width="100" height="100" style="margin-bottom: 20px;" src="images/climate-cleanup.png"></img>
+            <h1 class="text-body-emphasis">Climate Cleanup</h1>
+            <p class="col-lg-8 mx-auto fs-5 text-muted">
+                <strong>Climate Cleanup</strong> is an independent entrepreneurial non-profit focused around gathering a community of entrepreneurs to extract carbon from the atmosphere utilising nature based solutions to climate change.
+            </p>
+        </div>
         <div class="divider"></div>
         <div class="container">
             <footer class="py-3 my-4">
