--- a/static/entrepreneurs.html
+++ b/static/entrepreneurs.html
@@ -15,7 +15,7 @@
     <body>
    <!---- ======= Navbar ======= ---->
    <body>
-    <nav class="navbar navbar-expand-lg navbar-transparent">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <div class="row">
             <div class="col-md-12"></div>
