--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="container my-5 construction section">
             <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-5 border shadow-lg">
                 <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden m-5">
-                    <img class="rounded-4" src="images/construction2.jpg" alt="" width="400" height="400">
+                    <img class="rounded-4" src="images/construction2.jpg" alt="Construction stored carbon" width="400" height="400">
                 </div>
                 <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
                     <h1 class="display-4 fw-bold lh-1">Construction-Stored Carbon</h1>
