--- a/pillar-ocean.html
+++ b/pillar-ocean.html
@@ -55,7 +55,7 @@
     </nav>
   
   <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 80%;">
-      <h1 class="display-1 title">Ocean-Stored Carbon</h1>
+      <h1 class="display-1 title">Ocean-stored Carbon</h1>
   </div>
 
 
