--- a/pillar-construction.html
+++ b/pillar-construction.html
@@ -56,7 +56,7 @@
     </nav>
   
   <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 80%;">
-      <h1 class="display-1 title">Construction Stored Carbon</h1>
+      <h1 class="display-1 title">Construction-stored Carbon</h1>
   </div>
 
 
